--- a/products.html
+++ b/products.html
@@ -461,6 +461,84 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- New Product Card: Stapler -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Stapler" alt="Stapler" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Stapler</h4>
+                        <p class="text-sm text-gray-600 mb-4">Durable office stapler with ergonomic design.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 200 – 400</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Envelopes -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Envelopes" alt="Envelopes" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Envelopes (Pack)</h4>
+                        <p class="text-sm text-gray-600 mb-4">Pack of 100 white business envelopes.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 350 – 550</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Desk Organizer -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Organizer" alt="Desk Organizer" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Desk Organizer</h4>
+                        <p class="text-sm text-gray-600 mb-4">Multi-compartment desk organizer for supplies.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 800 – 1,500</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Highlighters -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Highlighter" alt="Highlighters" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Highlighters (Set)</h4>
+                        <p class="text-sm text-gray-600 mb-4">Set of assorted colored highlighters.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 250 – 400</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Printer Ink Cartridges -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Ink" alt="Printer Ink Cartridges" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Printer Ink Cartridges</h4>
+                        <p class="text-sm text-gray-600 mb-4">Original and compatible ink cartridges (various models).</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 1,000 – 3,000</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Shredder -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Shredder" alt="Paper Shredder" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Paper Shredder (Personal)</h4>
+                        <p class="text-sm text-gray-600 mb-4">Compact paper shredder for home or small office use.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 4,000 – 8,000</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="text-center mt-12 text-lg fade-in-on-scroll">
@@ -535,6 +613,7 @@
             <p class="text-sm opacity-70">&copy; 2025 Charlesabi Enterprises. All Rights Reserved.</p>
         </div>
     </footer>
+
     <!-- Scroll-to-top Button - Accessible and visible -->
     <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="fixed bottom-6 right-6 bg-accent text-white p-3 rounded-full shadow-lg hover:bg-primary transition duration-300 z-50 text-xl font-bold">
         ↑
