--- a/products.html
+++ b/products.html
@@ -462,7 +462,7 @@
                     </div>
                 </div>
 
-                <!-- New Product Card: Stapler -->
+                <!-- Product Card: Stapler -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
                     <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Stapler" alt="Stapler" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -475,7 +475,7 @@
                     </div>
                 </div>
 
-                <!-- New Product Card: Envelopes -->
+                <!-- Product Card: Envelopes -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
                     <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Envelopes" alt="Envelopes" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -488,7 +488,7 @@
                     </div>
                 </div>
 
-                <!-- New Product Card: Desk Organizer -->
+                <!-- Product Card: Desk Organizer -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
                     <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Organizer" alt="Desk Organizer" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -501,7 +501,7 @@
                     </div>
                 </div>
 
-                <!-- New Product Card: Highlighters -->
+                <!-- Product Card: Highlighters -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
                     <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Highlighter" alt="Highlighters" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -514,7 +514,7 @@
                     </div>
                 </div>
 
-                <!-- New Product Card: Printer Ink Cartridges -->
+                <!-- Product Card: Printer Ink Cartridges -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
                     <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Ink" alt="Printer Ink Cartridges" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -527,7 +527,7 @@
                     </div>
                 </div>
 
-                <!-- New Product Card: Shredder -->
+                <!-- Product Card: Shredder -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
                     <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Shredder" alt="Paper Shredder" class="w-full h-48 object-cover">
                     <div class="p-6">
@@ -539,6 +539,59 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- New Product Card: Counter Books -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Counter+Book" alt="Counter Book" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Counter Books</h4>
+                        <p class="text-sm text-gray-600 mb-4">High-quality A4 counter books for accounting and records.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 100 – 300</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Box Files -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Box+File" alt="Box File" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Box Files</h4>
+                        <p class="text-sm text-gray-600 mb-4">Durable box files for organized document storage.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 250 – 500</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Ring Files -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Ring+File" alt="Ring File" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Ring Files</h4>
+                        <p class="text-sm text-gray-600 mb-4">Assorted sizes of ring files for easy document management.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 120 – 250</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- New Product Card: Geometrical Sets -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
+                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Geometry+Set" alt="Geometrical Set" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h4 class="font-playfair font-bold text-xl text-primary mb-2">Geometrical Sets</h4>
+                        <p class="text-sm text-gray-600 mb-4">Complete geometry sets for students and professionals.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-2xl font-bold text-accent">KES 300 – 600</span>
+                            <a href="contact.html" class="bg-primary text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-accent transition duration-300">Inquire</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="text-center mt-12 text-lg fade-in-on-scroll">
