--- a/products.html
+++ b/products.html
@@ -308,7 +308,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 fade-in-on-scroll">
                 <!-- Product Card: Receipt Book -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Receipt" alt="Receipt Book" class="w-full h-48 object-cover">
+                    <img src="IMAGES/receipt book" alt="Receipt Book" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Receipt Book</h4>
                         <p class="text-sm text-gray-600 mb-4">Custom carbon copy receipt books (A5/A6).</p>
@@ -321,7 +321,7 @@
 
                 <!-- Product Card: Photocopying (Per Page) -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Copy" alt="Photocopying" class="w-full h-48 object-cover">
+                    <img src="IMAGES/photocopying" alt="Photocopying" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Photocopying (Per Page)</h4>
                         <p class="text-sm text-gray-600 mb-4">Black and white laser copy.</p>
@@ -334,7 +334,7 @@
 
                 <!-- Product Card: Binding -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Binding" alt="Binding" class="w-full h-48 object-cover">
+                    <img src="IMAGES/binders" alt="Binding" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Binding</h4>
                         <p class="text-sm text-gray-600 mb-4">Thermal or spiral binding for documents.</p>
@@ -360,7 +360,7 @@
 
                 <!-- Product Card: Custom Stamps -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Stamp" alt="Custom Stamps" class="w-full h-48 object-cover">
+                    <img src="IMAGES/stamps" alt="Custom Stamps" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Custom Stamps</h4>
                         <p class="text-sm text-gray-600 mb-4">Personalized rubber & self-inking stamps.</p>
@@ -386,7 +386,7 @@
 
                 <!-- Product Card: File Binders -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Binder" alt="File Binders" class="w-full h-48 object-cover">
+                    <img src="IMAGES/binders" alt="File Binders" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">File Binders</h4>
                         <p class="text-sm text-gray-600 mb-4">Durable lever arch or ring binders.</p>
@@ -399,7 +399,7 @@
 
                 <!-- Product Card: Sticky Notes -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Sticky" alt="Sticky Notes" class="w-full h-48 object-cover">
+                    <img src="IMAGES/sticky notes" alt="Sticky Notes" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Sticky Notes</h4>
                         <p class="text-sm text-gray-600 mb-4">Convenient pack of assorted sizes/colors.</p>
@@ -542,7 +542,7 @@
 
                 <!-- New Product Card: Counter Books -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Counter+Book" alt="Counter Book" class="w-full h-48 object-cover">
+                    <img src="IMAGES/counter book" alt="Counter Book" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Counter Books</h4>
                         <p class="text-sm text-gray-600 mb-4">High-quality A4 counter books for accounting and records.</p>
@@ -555,7 +555,7 @@
 
                 <!-- New Product Card: Box Files -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Box+File" alt="Box File" class="w-full h-48 object-cover">
+                    <img src="IMAGES/box file.jfif" alt="Box File" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Box Files</h4>
                         <p class="text-sm text-gray-600 mb-4">Durable box files for organized document storage.</p>
@@ -568,7 +568,7 @@
 
                 <!-- New Product Card: Ring Files -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/FF8C42/FFFFFF?text=Ring+File" alt="Ring File" class="w-full h-48 object-cover">
+                    <img src="IMAGES/ringfile.jfif" alt="Ring File" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Ring Files</h4>
                         <p class="text-sm text-gray-600 mb-4">Assorted sizes of ring files for easy document management.</p>
@@ -671,6 +671,5 @@
     <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="fixed bottom-6 right-6 bg-accent text-white p-3 rounded-full shadow-lg hover:bg-primary transition duration-300 z-50 text-xl font-bold">
         ↑
     </button>
-
 </body>
 </html>
