--- a/products.html
+++ b/products.html
@@ -308,7 +308,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 fade-in-on-scroll">
                 <!-- Product Card: Receipt Book -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="IMAGES/receipt book" alt="Receipt Book" class="w-full h-48 object-cover">
+                    <img src="IMAGES/receipt book.jfif" alt="Receipt Book" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Receipt Book</h4>
                         <p class="text-sm text-gray-600 mb-4">Custom carbon copy receipt books (A5/A6).</p>
@@ -321,7 +321,7 @@
 
                 <!-- Product Card: Photocopying (Per Page) -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="IMAGES/photocopying" alt="Photocopying" class="w-full h-48 object-cover">
+                    <img src="IMAGES/photocopying.jfif" alt="Photocopying" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Photocopying (Per Page)</h4>
                         <p class="text-sm text-gray-600 mb-4">Black and white laser copy.</p>
@@ -334,7 +334,7 @@
 
                 <!-- Product Card: Binding -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="IMAGES/binders" alt="Binding" class="w-full h-48 object-cover">
+                    <img src="IMAGES/binders.jfif" alt="Binding" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Binding</h4>
                         <p class="text-sm text-gray-600 mb-4">Thermal or spiral binding for documents.</p>
@@ -360,7 +360,7 @@
 
                 <!-- Product Card: Custom Stamps -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="IMAGES/stamps" alt="Custom Stamps" class="w-full h-48 object-cover">
+                    <img src="IMAGES/stamps.jfif" alt="Custom Stamps" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Custom Stamps</h4>
                         <p class="text-sm text-gray-600 mb-4">Personalized rubber & self-inking stamps.</p>
@@ -386,7 +386,7 @@
 
                 <!-- Product Card: File Binders -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="IMAGES/binders" alt="File Binders" class="w-full h-48 object-cover">
+                    <img src="IMAGES/binders.jfif" alt="File Binders" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">File Binders</h4>
                         <p class="text-sm text-gray-600 mb-4">Durable lever arch or ring binders.</p>
@@ -425,7 +425,7 @@
 
                 <!-- Product Card: Office Pens (Box) -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Pens" alt="Office Pens" class="w-full h-48 object-cover">
+                    <img src="IMAGES/office pens.jfif" alt="Office Pens" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Office Pens (Box)</h4>
                         <p class="text-sm text-gray-600 mb-4">Box of 50 blue/black ballpoint pens.</p>
@@ -451,7 +451,7 @@
 
                 <!-- Product Card: Paper Ream (A4) -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="https://placehold.co/300x200/0F2C59/FFFFFF?text=Paper" alt="Paper Ream" class="w-full h-48 object-cover">
+                    <img src="IMAGES/" alt="Paper Ream" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Paper Ream (A4)</h4>
                         <p class="text-sm text-gray-600 mb-4">500 sheets of A4 multi-purpose paper.</p>
