--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(15, 44, 89, 0.05); /* Very subtle dark overlay for text readability */
+            background: rgba(15, 44, 89, 0.3); /* Increased opacity for better image visibility */
             z-index: 1;
         }
         .contact-hero-content {
