--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,9 @@
             background-color: var(--tw-colors-backgroundLight); /* Global background color from Tailwind config */
             background-repeat: repeat; /* Kept for consistency if a pattern is desired elsewhere */
             background-attachment: fixed; /* Creates a subtle parallax effect for the pattern */
+            background-image: url('IMAGES/Kenya.jfif'); /* Moved background image to body for continuous effect */
+            background-size: cover;
+            background-position: center;
         }
         body.loaded {
             opacity: 1; /* Final state after page content is loaded */
@@ -100,14 +103,12 @@
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
 
-        /* Hero Section for Contact Page - now consistent with homepage hero */
+        /* Hero Section for Contact Page */
         .contact-hero-section {
             min-height: 50vh; /* Shorter hero for sub-pages */
             padding-top: 80px; /* Accounts for fixed header height */
-            background-image: url('IMAGES/Kenya.jfif'); /* Set background image as requested */
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            background-image: none; /* Removed background image from here, now on body */
+            background-color: transparent; /* Ensure transparency to show body background */
             position: relative;
             display: flex;
             align-items: center;
@@ -123,7 +124,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(15, 44, 89, 0.3); /* Increased opacity for better image visibility */
+            background: rgba(15, 44, 89, 0.3); /* Overlay for text readability */
             z-index: 1;
         }
         .contact-hero-content {
@@ -134,24 +135,7 @@
         }
 
         /* Section Backgrounds with Parallax and Overlays for visual depth - Now uses contact us.jpg */
-        .bg-section-parallax-1 {
-            background-image: url('IMAGES/contact us.jpg'); /* User's specified image */
-            background-size: cover;
-            background-position: left; /* Aligned to the left */
-            background-attachment: fixed;
-            position: relative;
-            z-index: 1;
-        }
-        .bg-section-parallax-1::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: rgba(0,0,0,0); /* Fully transparent overlays for background images */
-            z-index: -1;
-        }
+        /* Removed .bg-section-parallax-1 as its image is no longer needed here */
 
         .bg-call-to-action {
             background-image: url('IMAGES/CALL.png'); /* Consistent image */
@@ -285,7 +269,7 @@
     </header>
 
     <!-- Contact Page Hero Section -->
-    <section id="top" class="contact-hero-section">
+    <section id="top" class="contact-hero-section pb-0">
         <div class="contact-hero-content animate-fade-in">
             <h2 class="text-4xl md:text-5xl lg:text-6xl font-playfair font-bold mb-6 leading-tight">
                 Get in Touch With Us
@@ -297,7 +281,7 @@
     </section>
 
     <!-- Contact Information & Form Section -->
-    <section id="contact-details" class="py-16 md:py-24 text-textDark bg-backgroundLight">
+    <section id="contact-details" class="pt-0 md:pt-0 pb-16 md:pb-24 text-textDark bg-transparent">
         <div class="container mx-auto px-4 md:px-8 lg:px-16 py-8 bg-cardBg rounded-xl shadow-lg fade-in-on-scroll">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-start">
                 <!-- Contact Information Column -->
