--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
         }
 
         .bg-call-to-action {
-            background-image: url('https://placehold.co/1920x1080/0F2C59/FFFFFF?text=Call+to+Action+Background'); /* Consistent image placeholder */
+            background-image: url('IMAGES/CALL.png'); /* Consistent image placeholder */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
