--- a/products.html
+++ b/products.html
@@ -492,7 +492,7 @@
 
                 <!-- New Product Card: Counter Books -->
                 <div class="bg-white rounded-lg shadow-md overflow-hidden card-hover border border-subtleBorder">
-                    <img src="IMAGES/counter book" alt="Counter Book" class="w-full h-48 object-cover">
+                    <img src="IMAGES/counter book.jfif" alt="Counter Book" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="font-playfair font-bold text-xl text-primary mb-2">Counter Books</h4>
                         <p class="text-sm text-gray-600 mb-4">High-quality A4 counter books for accounting and records.</p>
