--- a/services.html
+++ b/services.html
@@ -516,11 +516,11 @@
                     </li>
                     <li class="flex items-center justify-center md:justify-start">
                         <i data-lucide="phone" class="w-5 h-5 mr-2 text-accent"></i>
-                        <a href="tel:+2547XXXXXXXX" class="hover:text-accent transition duration-300">+254 7XX XXX XXXX</a>
+                        <a href="tel:+254711408733" class="hover:text-accent transition duration-300">+254 711408733</a>
                     </li>
                     <li class="flex items-center justify-center md:justify-start">
                         <i data-lucide="mail" class="w-5 h-5 mr-2 text-accent"></i>
-                        <a href="mailto:info@charlesabienterprises.com" class="hover:text-accent transition duration-300">info@charlesabienterprises.com</a>
+                        <a href="mailto:charlessaabi@gmail.com.com" class="hover:text-accent transition duration-300">charlessaabi@gmail.com</a>
                     </li>
                 </ul>
             </div>
